# building-energy-prediction-api

./: .gitignore  README.md  app.py  pyproject.toml
bentoml_service/: .bentoignore  service.py  transformers.py  validation.py
data/processed/: samples.xlsx  test_data_rs_19.csv  test_data_rs_19_samples.csv
notebooks/: analyse.ipynb  helper.py
terraform/infra/: main.tf  outputs.tf  variables.tf
terraform/service/: main.tf  outputs.tf  variables.tf
utils/: tools.py
validation/: api_test.ipynb  api_test_cases.json  api_test_rd.ipynb
